--- a/src/app/components/proyects/proyects.component.html
+++ b/src/app/components/proyects/proyects.component.html
@@ -1,7 +1,7 @@
 <div class="   md:px-6 lg:px-8">
     <div class="text-700 text-center">
       <div class="text-blue-600 font-bold mb-3 text-2xl flex items-center justify-center"><i class="pi pi-star-fill"></i>&nbsp;PROYECTOS REALIZADOS
-      </div>
+      </div><!-- 
       <div class="card">
         <p-carousel [value]="products" [numVisible]="3" [numScroll]="3" [circular]="false">
           <ng-template let-product pTemplate="item">
@@ -17,7 +17,7 @@
             </div>
           </ng-template>
         </p-carousel>
-      </div>
+      </div> -->
       <a pButton pRipple href="https://github.com/SoHenriquez" aria-label="Github" target="_blank" rel="noopener"
         pTooltip="GitHub" tooltipPosition="bottom"
         class="font-bold px-5 py-3 p-button-raised p-button-rounded white-space-nowrap" label="Ver más"
