--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,28 +1,39 @@
-<nav class=" min-w-full bg-gray-800">
+<nav class=" min-w-screen-xl bg-gray-800">
   <div class=" px-2 sm:px-6 lg:px-8">
-    <div class="relative flex h-16 items-center justify-between">
-      <div class="flex flex-1 gap-4  sm:items-stretch sm:justify-between">
+    <div class="relative min-w-screen-xl flex h-16 items-center justify-between">
+      
+      <div class="flex flex-1 sm:items-stretch justify-between">
         <div class="flex flex-shrink-0 items-center gap-1">
-          <p class="text-gray-300 text-3xl text-primary font-bold">Portafolio</p>
+          <p class="text-gray-300 text-3xl text-primary font-bold">Esteban SH</p>
         </div>
         <div class="justify-evenly sm:ml-6 sm:block">
-          <div class="flex items-center space-x-4">
+          <div class="flex items-center sm:space-x-4">
 
-            <a href="#home" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
+            <a href="#home" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium hidden lg:block"
               aria-current="page">Inicio</a>
             <a href="#skills"
-              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Habilidades</a>
+              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium hidden sm:block">Habilidades</a>
             <a href="#trayectoria"
-              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Trayectoria</a>
-            <a href="https://drive.google.com/file/d/1J2pZZBPATmZQcfxqPfxGt96VFr2Fe-t8/view?usp=sharing" pButton pRipple aria-label="Mi currículum" target="_blank" rel="noopener" pTooltip="Descargar CV.pdf"
-              tooltipPosition="bottom" (click)="downloadFile()"
-              class="font-bold px-2 py-2 text-gray-300 hover:text-cyan-200 p-button-raised p-button-rounded white-space-nowrap outline outline-cyan-500 outline-1"
-              label="Mi curriculum" icon="pi pi-download" [style.background]="'none'">
+              class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium hidden sm:block">Trayectoria</a>
+            <a href="https://drive.google.com/file/d/1J2pZZBPATmZQcfxqPfxGt96VFr2Fe-t8/view?usp=sharing" 
+              pButton pRipple aria-label="" target="_blank" rel="noopener" pTooltip="Descargar CV.pdf"
+              tooltipPosition="bottom"
+              class="font-bold px-2 py-1 text-gray-300 text-nowrap hover:text-cyan-200 p-button-raised p-button-rounded white-space-nowrap outline outline-cyan-500 outline-1 hidden lg:block"
+              label="Mi currículum" icon="pi pi-download" [style.background]="'none'">
 
           </a>
+          <!-- movil -->
+          
+          <!-- endmovil -->
             <div class="social-links">
+              <a pButton href="https://drive.google.com/file/d/1J2pZZBPATmZQcfxqPfxGt96VFr2Fe-t8/view?usp=sharing" aria-label="Github" target="_blank" rel="noopener"
+                pTooltip="Descargar CV.pdf" tooltipPosition="bottom" [style.background]="'none'" class="p-0 lg:hidden">
+                <svg width="25px" height="25px" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.5 6.5V6H2V6.5H2.5ZM6.5 6.5V6H6V6.5H6.5ZM6.5 10.5H6V11H6.5V10.5ZM13.5 3.5H14V3.29289L13.8536 3.14645L13.5 3.5ZM10.5 0.5L10.8536 0.146447L10.7071 0H10.5V0.5ZM2.5 7H3.5V6H2.5V7ZM3 11V8.5H2V11H3ZM3 8.5V6.5H2V8.5H3ZM3.5 8H2.5V9H3.5V8ZM4 7.5C4 7.77614 3.77614 8 3.5 8V9C4.32843 9 5 8.32843 5 7.5H4ZM3.5 7C3.77614 7 4 7.22386 4 7.5H5C5 6.67157 4.32843 6 3.5 6V7ZM6 6.5V10.5H7V6.5H6ZM6.5 11H7.5V10H6.5V11ZM9 9.5V7.5H8V9.5H9ZM7.5 6H6.5V7H7.5V6ZM9 7.5C9 6.67157 8.32843 6 7.5 6V7C7.77614 7 8 7.22386 8 7.5H9ZM7.5 11C8.32843 11 9 10.3284 9 9.5H8C8 9.77614 7.77614 10 7.5 10V11ZM10 6V11H11V6H10ZM10.5 7H13V6H10.5V7ZM10.5 9H12V8H10.5V9ZM2 5V1.5H1V5H2ZM13 3.5V5H14V3.5H13ZM2.5 1H10.5V0H2.5V1ZM10.1464 0.853553L13.1464 3.85355L13.8536 3.14645L10.8536 0.146447L10.1464 0.853553ZM2 1.5C2 1.22386 2.22386 1 2.5 1V0C1.67157 0 1 0.671573 1 1.5H2ZM1 12V13.5H2V12H1ZM2.5 15H12.5V14H2.5V15ZM14 13.5V12H13V13.5H14ZM12.5 15C13.3284 15 14 14.3284 14 13.5H13C13 13.7761 12.7761 14 12.5 14V15ZM1 13.5C1 14.3284 1.67157 15 2.5 15V14C2.22386 14 2 13.7761 2 13.5H1Z" fill="#000000"/>
+                  </svg>
+              </a>
               <a pButton href="https://github.com/SoHenriquez" aria-label="Github" target="_blank" rel="noopener"
-                pTooltip="GitHub" tooltipPosition="bottom" [style.background]="'none'">
+                pTooltip="GitHub" tooltipPosition="bottom" [style.background]="'none'" class="pl-5">
                 <svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg"
                   alt="Github">
                   <path
@@ -36,6 +47,11 @@
                   <path
                     d="M20.599 0H3.4C1.527 0 0 1.527 0 3.4v17.2C0 22.473 1.527 24 3.4 24h17.2c1.873 0 3.4-1.527 3.4-3.4V3.4C24 1.527 22.473 0 20.6 0zM7.543 20.12H4.155V9.51h3.388v10.61zM5.848 8.073a1.823 1.823 0 11-.001-3.647 1.823 1.823 0 01.001 3.647zM20.12 20.12h-3.387v-5.59c0-1.33-.027-3.047-1.853-3.047-1.855 0-2.14 1.448-2.14 2.946v5.69H9.343V9.51h3.308v1.563h.044c.46-.874 1.58-1.79 3.265-1.79 3.492 0 4.14 2.3 4.14 5.292v6.545z" />
                 </svg>
+              </a>
+              <a pButton href="https://www.instagram.com/badrequest._/" aria-label="Github" target="_blank" rel="noopener"
+                pTooltip="Instagram" tooltipPosition="bottom" [style.background]="'none'" class="mr-1 sm:mr-0">
+                <svg width="24px" height="24px" viewBox="0 0 24 24" role="img" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"/></svg>
               </a>
             </div>
           </div>
