--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -6,7 +6,7 @@
           <h2 class="gradient text-4xl text-primary font-bold ">Desarrollador Web </h2>
           <span class="text-3xl">💻</span>
         </div>
-        <h3 class="mb-2">Estudiante Ingienería Civil Informática</h3>
+        <h3 class="mb-2">Estudiante Ingeniería Civil Informática</h3>
 
         <p class="mt-0 mb-4 text-lg leading-8 text-gray-600 text-justify">Una de las cosas más significativas de la
           vida
